--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html> 
 <html> 
 	<head> 
-		<title>Flask and SQLite </title> 
+		<title>GIC logosy :P</title> 
 	</head> 
+	<style> 
+		table, th, td { 
+			border: 1px solid black; 
+		} 
+		</style> 
 	<body> 
-		<h1>Build Web App Using Flask and SQLite</h1> 
-		<button class="btn" type="button" onclick="window.location.href='{{ url_for('join') }}';">Fill form to get updates</button><br/> 
-		<button class="btn" type="button" onclick="window.location.href='{{ url_for('participants') }}';">Check participant list</button>
+		<table style="width:100%"> 
+			<tr> 
+				<th>Logo</th> 
+				<th>Nazwa firmy</th> 
+				<th>Opis</th>
+			</tr> 
+			{%for item in companyData%} 
+			<tr> 
+				<td>{{item[0]}}</td> 
+				<td>{{item[1]}}</td> 
+				<td>{{item[2]}}</td>
+			</tr>
+			{%endfor%} 
+		</table>		 
 	</body> 
-</html> 
+</html>
