--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,20 @@
 	</head> 
 	<style> 
 		table, th, td { 
-			border: 1px solid black; 
-		} 
-		</style> 
+			border: 1px solid black;
+		}
+	</style> 
 	<body> 
-		<table style="width:100%"> 
+		<table> 
 			<tr> 
 				<th>Logo</th> 
 				<th>Nazwa firmy</th> 
 				<th>Opis</th>
 			</tr> 
 			{%for item in companyData%} 
-			<tr> 
-				<td>{{item[0]}}</td> 
-				<td>{{item[1]}}</td> 
+			<tr>
+				<td>{{item[4]}}</td>
+				<td>{{item[3]}}</td>
 				<td>{{item[2]}}</td>
 			</tr>
 			{%endfor%} 
