--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 			</tr> 
 			{%for item in companyData%} 
 			<tr>
-				<td>{{item[2]}}</td>
+				<td><img src='{{ url_for("image_from_sqlite", ident = item[0]) }}' /></td>
 				<td>{{item[3]}}</td>
 				<td>{{item[4]}}</td>
 			</tr>
